--- a/schedule.qmd
+++ b/schedule.qmd
@@ -1,6 +1,3 @@
----
-toc: true
----
 
 ```{r}
 #| message: false
@@ -24,6 +21,9 @@ gradescope <- "https://www.gradescope.com/courses/1205064"
 #| message: false
 readr::read_csv(here::here("specific-content/schedule.csv")) |> 
   mutate(
+    session = if_else(
+      is.na(session), " ", session
+    ),
     reading = if_else(
       is.na(reading), 
       paste0(fontawesome::fa("book", fill = "#e6ddd1")),
@@ -65,15 +65,28 @@ readr::read_csv(here::here("specific-content/schedule.csv")) |>
       assessment = if_else(
       is.na(assessment), 
       paste0(fontawesome::fa("list-check", fill = "#e6ddd1")),
-      paste0(
+      if_else(
+        is.numeric(assessment),
+        paste0(
         "[", 
         fontawesome::fa("list-check"), 
         "]",
         "(",
         gradescope, 
+        "/assignments/",
         assessment, 
         ")"
+        ),
+        paste0(
+        "[", 
+        fontawesome::fa("list-check"), 
+        "]",
+        "(specific-content/readings/", 
+        reading, 
+        ")"
         )
+        )
+      
       ),
      other = if_else(
       is.na(other), 
