--- a/schedule.qmd
+++ b/schedule.qmd
@@ -62,12 +62,17 @@ readr::read_csv(here::here("specific-content/schedule.csv")) |>
         ")"
         )
       ),
-      assessment = if_else(
-      is.na(assessment), 
-      paste0(fontawesome::fa("list-check", fill = "#e6ddd1")),
-      if_else(
-        is.numeric(assessment),
-        paste0(
+      assessment = case_when(
+      is.na(assessment) ~ paste0(fontawesome::fa("list-check", fill = "#e6ddd1")),
+      grepl("qmd", assessment) ~ paste0(
+        "[", 
+        fontawesome::fa("list-check"), 
+        "]",
+        "(specific-content/assessment/", 
+        assessment, 
+        ")"
+        ),
+      TRUE ~ paste0(
         "[", 
         fontawesome::fa("list-check"), 
         "]",
@@ -76,17 +81,7 @@ readr::read_csv(here::here("specific-content/schedule.csv")) |>
         "/assignments/",
         assessment, 
         ")"
-        ),
-        paste0(
-        "[", 
-        fontawesome::fa("list-check"), 
-        "]",
-        "(specific-content/readings/", 
-        reading, 
-        ")"
         )
-        )
-      
       ),
      other = if_else(
       is.na(other), 
